--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 <body>
 <h1>throwback.me</h1>
-<p>old stuff. sometimes.</p>
+<p>old stuff. coming soon-ish.</p>
 </body>
 </html>
