first post goes live
Playground games

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <body>
 <h1>throwback.me</h1>
-<p>old stuff. coming soon-ish.</p>
+<p>old stuff. written occasionally.</p>
+<p><a href="/playground_games.html">Playground games</a></p>
 </body>
 </html>
