--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1>throwback.me</h1>
 <p>old stuff. written occasionally.</p>
 <p><a href="/playground_games.html">Playground games</a></p>
+<p><a rel=“me” href=“https://mastodon.cloud/@thecosas”>toot@me</a></p>
 </body>
 </html>
